fixed navbar doubling when on small screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@ body {
 //   padding-top: 70px;
   font-family: sans-serif;
 }
-// @media (max-width:845px) {
-//     body {
-//         padding-top:100px;
-//     }
-// }
+@media (max-width:845px) {
+    body {
+        padding-top:128px;
+    }
+}
